[package]
name = "btmeister"
version = "0.6.6"
edition = "2021"
authors = [ "Haruaki TAMADA" ]
license-file = "LICENSE"
description = "Detecting build tools/task runners in use of the projects"
repository = "https://github.com/tamada/btmeister"
homepage = "https://tamada.github.io/btmeister/"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["build tools", "task runners", "detection", "utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    clap = { version = "4.5.23", features = ["derive"] }
    clap_complete = "4.5.38"
    ignore = "0.4.18"
    path-matchers = "1.0.2"
    serde = { version = "1.0.217", features = ["derive"] }
    serde_json = "1.0.135"
    rust-embed="6.4.0"
