[package]
name = "btmeister"
version = "0.7.1"
edition = "2021"
authors = [ "Haruaki TAMADA" ]
license-file = "LICENSE"
description = "Detecting build tools/task runners in use of the projects"
repository = "https://github.com/tamada/btmeister"
homepage = "https://tamada.github.io/btmeister/"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["build tools", "task runners", "detection", "utility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5.38"
ignore = "0.4.18"
path-matchers = "1.0.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
rust-embed="8.5.0"
bzip2 = "0.5.0"
tar = "0.4.43"
zip = "2.2.2"
xz2 = "0.1.7"
zstd = "0.13.2"
flate2 = "1.0.35"
env_logger = "0.11.6"
log = "0.4.25"
