[workspace]
members = ["cli", "lib"]

resolver = "3"

[workspace.package]
version = "0.7.4"
edition = "2021"
authors = [ "Haruaki TAMADA" ]
license-file = "LICENSE"
repository = "https://github.com/tamada/btmeister"
homepage = "https://tamada.github.io/btmeister/"
readme = "README.md"
keywords = ["build tools", "task runners", "detection", "utility"]
