[package]
name = "btmeister-cli"
readme = "README.md"
categories = ["command-line-utilities"]
description = "Detecting build tools/task runners in use of the projects"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btmeister = { path = "../lib" }
clap = { version = "4.5.27", features = ["derive"] }
clap_complete = "4.5.38"
env_logger = "0.11.6"
log = "0.4.25"
serde = "1.0.217"
