[package]
name = "btmeister"
readme = "README.md"
categories = ["build-tools", "task-runners"]
description = "An API for detecting build tools/task runners in use of the projects"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
ignore = "0.4.18"
path-matchers = "1.0.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
rust-embed="8.5.0"
bzip2 = "0.5.0"
tar = "0.4.43"
zip = "2.2.2"
xz2 = "0.1.7"
zstd = "0.13.2"
flate2 = "1.0.35"
log = "0.4.25"
